# Backend

./: .gitignore  Cargo.toml  README.md  rest-api_1.http
accounts/: Cargo.toml
accounts/src/: accounts_provider.rs  acct_provider.rs  controller.rs  lib.rs
accountsprovider/: Cargo.toml  Rocket.toml
accountsprovider/src/: accountsprovider.rs  appserver.rs  controller.rs  main.rs
appserver/: Cargo.toml
appserver/src/: controller.rs  main.rs  utils.rs
authenticator/: Cargo.toml  README.md  Rocket.toml
authenticator/src/: appserver.rs  authenticator.rs  authenticator_control.rs  controller.rs  dataprovider.rs  gcp_auth.rs  jwt.rs  lib.rs  main.rs  userdata.rs
authenticator/src/authenticator_control/: authenticator.rs  controller.rs
authenticator/src/dataprovider/: primary_data_provider.rs
database/: Cargo.toml
database/src/: data_provider.rs  lib.rs  primary_data_provider.rs
dataprovider/: Cargo.toml
dataprovider/src/: data_structs.rs  lib.rs  primary_data_provider.rs  utils.rs
http/: Cargo.toml
http/src/: lib.rs  response.rs  statuscode.rs
jwt/: Cargo.toml
jwt/src/: apikey.rs  claim.rs  jwt.rs  lib.rs
userdata/: Cargo.toml
userdata/src/: lib.rs  siteinfo.rs  userdata.rs  userinfo.rs
