[package]
name = "accounts"
version = "0.1.0"
authors = ["Adrian Scrab <adrian.scrab@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
userdata = { path = "../userdata" }
database = { path = "../database" }
http = { path = "../http" }
serde_json = "1.0.50"
serde = { version = "1.0.106", features = ["derive"] }