[package]
name = "jwt"
version = "0.1.0"
authors = ["Adrian Scrab <adrian.scrab@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
jsonwebtoken = "5.0.1"
rocket = { version = "0.4.4", optional=false }
#mongodb = "0.3.12"
#bson = "0.13.0"
chrono = "0.4.11"

userdata = { path = "../userdata" }